# Ano4-ECT

./: README.md
AAD/P/: bubbleSort.c
AC/SNMP/: SNMP.gns3
AC/SNMP/project-files/captures/: LabComServer_22_23-1_Ethernet0_to_R1_FastEthernet00.pcap
AC/VXLAN/: VXLAN.gns3
AC/advanced_bgp/advanced_bgp/: advanced_bgp.gns3
AC/bgp/bgpAula2/: bgpAula2.gns3
AC/mpls/mpls/: mpls.gns3
AC/project/: project.gns3
ASE/: praticals.txt
ASE/tc74/: CMakeLists.txt
ASE/tc74/main/: CMakeLists.txt  TempSensorTC74.c  TempSensorTC74.h  i2c_temp_sens_devdriver.c
CLE/P/MPI/basic1/: hello1.c  hello2.c  problems2Ex1  problems2Ex1.c  problems2Ex2  problems2Ex2.c  sendRecData.c
CLE/P/MPI/problems2/: matrix  matrix.c  sequence  sequence.c
CLE/P/class00/: BS  Ex001.c  Ex01  Ex01.c  Ex02  Ex02BS.c  Ex02MS.c  aula.txt
IC/sndfile-example-src/: CMakeLists.txt
IC/sndfile-example-src/CMakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
MDRS/P/: task1.m  task2.m  task3.m  task4.m
MDRS/P/Task10_MATLABcodes/: calculateLinkBand1plus1.m  calculateLinkBand1to1.m  task10.m
MDRS/P/Task8_MATLABcodes/: task8.m
MDRS/P/aula4/: Simulator3.m  task5.m  task7.m
MDRS/P/task11/: calculateEnergy.m  ex11.m  untitled5.m  untitled6.m
MDRS/P/task12/: bestCostPaths.m  ex12.m
MDRS/P/task9/: task9.m
MDRS/proj/proj1/: Simulator3V2.m  Simulator4V2.m  ex2c.m
SD/P/classes/class00/: NewFifo.java  NewStack.java  (+1 more)
SRC/firewall/: Ping_PC2_to_PC1.pcapng
SRC/firewall/Notes/: notes.txt
SRC/firewall/highAvailabilityScenarios/: FW2-FW1_VRRP_UDP.pcapng  LoadBalancingScenarioLB1_FW1.pcapng
(+86 files in other folders)
